violating_resources/anthos-service-mesh/authorization-policy/safe-pattern/samples/example_allowed_istio_label.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: good-authz-policy-istio-ingress
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        hosts: ["test.com", "test.com:*"]
