violating_resources/anthos-service-mesh/authorization-policy/safe-pattern/samples/example_disallowed_deny_positive_match.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-positive-match
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
        hosts: ["test.com", "test.com:*"]
