violating_resources/anthos-service-mesh/authorization-policy/safe-pattern/samples/example_disallowed_hosts_on_noningress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hosts-on-noningress
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        hosts: ["test.com", "test.com:*"]
