violating_resources/anthos-service-mesh/authorization-policy/safe-pattern/samples/example_disallowed_invalid_hosts.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: invalid-hosts
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        hosts: ["test.com"]
