violating_resources/anthos-service-mesh/authorization-policy/safe-pattern/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: asm-authz-policy-safe-pattern
tests:
  - name: asm-authz-policy-safe-pattern
    template: template.yaml
    constraint: samples/constraint.yaml
    cases:
      - name: bad-hosts-on-noningress
        object: samples/example_disallowed_hosts_on_noningress.yaml
        assertions:
          - violations: yes
      - name: bad-invalid-hosts
        object: samples/example_disallowed_invalid_hosts.yaml
        assertions:
          - violations: yes
      - name: bad-allow-negative
        object: samples/example_disallowed_allow_negative_match.yaml
        assertions:
          - violations: yes
      - name: bad-deny-positive
        object: samples/example_disallowed_deny_positive_match.yaml
        assertions:
          - violations: yes
      - name: valid-authz-policy-istio-label
        object: samples/example_allowed_istio_label.yaml
        assertions:
          - violations: no
      - name: valid-authz-policy-asm-label
        object: samples/example_allowed_asm_label.yaml
        assertions:
          - violations: no
